--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,6 @@ keywords = ["wayland", "compositor", "bindings"]
 categories = ["external-ffi-bindings", "gui"]
 license = "MIT"
 exclude = [".travis.yml", ".rustfmt.toml", "vagga.yaml"]
-wlc = { version = "1.0", features = "unsafe-stable, static" }
 
 [badges]
 travis-ci = { repository = "Drakulix/wlc.rs" }
@@ -29,7 +28,7 @@ serde_derive = { version = "0.9", optional = true }
 wayland-server = { version = "0.8", optional = true }
 
 [features]
-default = []
+default = [ "unsafe-stable", "static" ]
 wayland = ["wayland-server"]
 render = []
 unsafe-stable = []
