--- a/wlc-sys/Cargo.toml
+++ b/wlc-sys/Cargo.toml
@@ -11,6 +11,21 @@ categories = ["external-ffi-bindings"]
 license = "MIT"
 exclude = [".travis.yml", ".rustfmt.toml"]
 
+[package.metadata.deb]
+maintainer = "Victor Brekenfeld <github@draculix.de>"
+copyright = "2016, Victor Brekenfeld <github@draculix.de>"
+license_file = ["LICENSE", "4"]
+extended_description = """\
+Bindgen generated low-level wlc wrapper \
+."""
+depends = "$auto"
+section = "utility"
+priority = "optional"
+assets = [
+    ["target/release/libwlc_sys.rlib", "usr/lib/rustlib/x86_64-unknown-linux-gnu/lib/", "755"],
+    ["README.md", "usr/share/doc/wlc-sys/README", "644"],
+]
+
 [lib]
 path = "src/lib.rs"
 
